<?xml version="1.0" encoding="UTF-8"?>
<root>
<mcu_controller maintainer="hsq">
  <catkin_ws>/opt/ros/catkin_ws</catkin_ws>
  <startup>rosrun mcu_controller mcu_controller</startup>
  <destroy>kill</destroy>
</mcu_controller>
<workstation>
  <catkin_ws>/opt/ros/catkin_ws</catkin_ws>
  <startup>rosrun workstation workstation</startup>
  <destroy>kill</destroy>
  <exec_depend>mcu_controller</exec_depend>
</workstation>
<cleaning_controller>
  <catkin_ws>/opt/ros/catkin_ws</catkin_ws>
  <startup>rosrun cleaning_controller cleaning_controller</startup>
  <destroy>kill</destroy>
  <exec_depend>mcu_controller</exec_depend>
</cleaning_controller>
<power_management>
  <catkin_ws>/opt/ros/catkin_ws</catkin_ws>
  <startup>rosrun power_management power_management</startup>
  <destroy>kill</destroy>
  <exec_depend>mcu_controller</exec_depend>
</power_management>
</root>
